--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,3 +1,5 @@
-<div class="loading-component" *ngIf="loading">
+@if (loading) {
+  <div class="loading-component">
     <div class="loader"></div>
-</div>
+  </div>
+}
