--- a/src/app/components/stats-bar/stats-bar.component.html
+++ b/src/app/components/stats-bar/stats-bar.component.html
@@ -1,8 +1,8 @@
 <div class="stats-bar-component">
-    <div class="bars" #markerDiv>
-        <ng-container *ngFor="let item of divMarkers">
-            <div class="divMarker" [ngStyle]="{'background': getLinearGradient(item)}"></div>
-        </ng-container>
-    </div>
-    <p class="title"><span class="name">{{ nameStat }}</span></p>
+  <div class="bars" #markerDiv>
+    @for (item of divMarkers; track item) {
+      <div class="divMarker" [ngStyle]="{'background': getLinearGradient(item)}"></div>
+    }
+  </div>
+  <p class="title"><span class="name">{{ nameStat }}</span></p>
 </div>
